# clone-github-repo

./: .editorconfig  .git-blame-ignore-revs  Cargo.toml  README.md
gql/: Cargo.toml
gql/src/: lib.rs  result.rs  utils.rs
src/: app_data.rs  double.go  getRepos.gql  github.rs  main.rs  messages.rs  repoExists.gql  utils.rs
src/app_data/: keyring.rs
src/utils/: match_repo_adress.rs
