[package]
name = "clone"
version = "0.1.0"
authors = ["Milesq <wmilosz88@gmail.com>"]
edition = "2018"

[dependencies]
gql = { path = "./gql" }
dialoguer = { version = "0.11.0", features = ["fuzzy-select"]}
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
dirs = "5.0.1"
bincode = "1.3.3"
aes-gcm = "0.10.3"
keytar = "0.1.6"
base64 = "0.22.1"
